Fixed MainScreen's SideBar overflow

--- a/src/screens/main/MainScreen.css
+++ b/src/screens/main/MainScreen.css
@@ -14,6 +14,8 @@
     flex: 1;
     display: flex;
 
+    overflow: hidden;
+
     background-color: orange;
 }
 
